package com.mahsan.library.model;

public interface HasAuthor {
    String getAuthor();
}
