package com.mahsan.library.model;

public interface HasPublisher {
    String getPublisher();
}
